--- a/style.css
+++ b/style.css
@@ -24,10 +24,15 @@ main {
 
     padding: 5.6rem 4rem;
     box-sizing: content-box;
+
+    display: flex;
+    flex-direction: column;
+    gap: 3.2rem;
 }
 
 img {
     width: 100%;
+    margin-block: 3.2rem;
 }
 
 h1, h2 {
@@ -35,9 +40,21 @@ h1, h2 {
     line-height: 3.6rem;
 }
 
+h2 {
+    margin-bottom: 3.2rem;
+}
+
 p, li, strong {
     font-size: 1.4rem;
     line-height: 1.8rem;
+}
+
+ul, ol {
+    padding-left: 2.4rem;
+}
+
+ul {
+    margin-bottom: 2.4rem;
 }
 
 button {
@@ -50,5 +67,5 @@ button {
     padding: .8rem 1.2rem;
     border-radius: .6rem;
 
-    margin-top: 1.8rem;
+    margin-top: 3.2rem;
 }
